[package]
name = "config-tools"
version = "0.3.1"
edition = "2021"
authors = ["Gray Logan <literal.gray@gmail.com>"]
description = "A simplified set of tools for working with configuration files."
license = "MIT"
repository = "https://github.com/piccoloser/config-tools"
keywords = ["config", "configuration"]
categories = ["config"]

[dependencies]
config_tools_derive = "0.1.1"
rust-ini = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
