[package]
name = "config-tools"
version = "0.5.0"
edition = "2021"
authors = ["Gray Logan <literal.gray@gmail.com>"]
description = "A simplified set of tools for working with configuration files."
documentation = "https://docs.rs/config-tools"
homepage = "https://github.com/piccoloser/config-tools"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/piccoloser/config-tools"
keywords = ["config", "ini", "builder", "macros", "serde"]
categories = ["config", "parser-implementations", "development-tools"]

[dependencies]
config_tools_derive = "0.1.1"
rust-ini = "0.21.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"